# Exercises_Challenges_Courses

./: .gitignore  CODEOWNERS  GamingApi.sln  README.md  TODO.md  greenkeeper.json
Assembly/: Ficha003_Assembly8086_ex001.asm  README.md
C/: URLify.c  bubbleSort.c  caesarShiftCipher.c  decimalBinaryConversion.c  reverseNumber.c  reverseString.c  rounding.c
C++/: Utils.hpp
GamingApi.WebApi.Core/: GamingApi.WebApi.Core.csproj
GamingApi.WebApi.Infrastructure/: DotnetHttpClient.cs  NewtonsoftJsonClient.cs  (+1 more)
GamingApi.WebApi.Infrastructure.Contracts/: DataGame.cs  DataPlatforms.cs  GamingApi.WebApi.Infrastructure.Contracts.csproj
Python/fastapi_todolist/: Dockerfile  README.md  main.py  mappers.py  pyproject.toml
Python/fastapi_todolist/data/: query_utils.py
Python/fastapi_todolist/data/entities/: data_item.py  data_user.py
Python/fastapi_todolist/entities/: data_item.py  data_user.py
Python/fastapi_todolist/lib/: HTTPException_utils.py  crypto.py  date_utils.py  jwt_utils.py  list_utils.py  ulid_utils.py  ulid_validators.py
Python/fastapi_todolist/models/: common.py  items.py  jwt.py  mapper_utils.py  users.py
Python/fastapi_todolist/routers/: auth.py  user_items.py  users.py
Rust/rust-ms-learning-path/rusty-journal/: Cargo.toml
Rust/rust-ms-learning-path/rusty-journal/src/: cli.rs  main.rs  task_file_db.rs  tasks.rs
Rust/tut_api-actix-cosmosdb/: .env  Cargo.toml  README.md  logs-api.postman_collection.json
Rust/tut_api-actix-cosmosdb/src/: main.rs
Rust/tut_api-actix-cosmosdb/src/controllers/: home_controller.rs  logs_controller.rs  mod.rs
Rust/tut_api-actix-cosmosdb/src/models/: delete_log_request.rs  mod.rs  post_log_request.rs
(+1554 files in other folders)
