[package]
name = "tut_api-actix-cosmosdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
actix-rt = "2.7"
actix-web = "4.0"
futures = "0.3"
chrono = "0.4"
bson = { version = "2.1" }
serde = { version = "1.0", futures = ["derive"] }
serde_json = "1.0"
mongodb = "2.1"
